# challenger1_ws

./: README.md
devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/include/nav2d_msgs/: LocalizedScan.h  RobotPose.h
devel/include/nav2d_navigator/: ExploreAction.h  ExploreActionFeedback.h  ExploreActionGoal.h  ExploreActionResult.h  ExploreFeedback.h  ExploreGoal.h  ExploreResult.h  GetFirstMapAction.h  GetFirstMapActionFeedback.h  GetFirstMapActionGoal.h  GetFirstMapActionResult.h  GetFirstMapFeedback.h  GetFirstMapGoal.h  GetFirstMapResult.h  LocalizeAction.h  LocalizeActionFeedback.h  LocalizeActionGoal.h  LocalizeActionResult.h  LocalizeFeedback.h  LocalizeGoal.h  LocalizeResult.h  MoveToPosition2DAction.h  MoveToPosition2DActionFeedback.h  MoveToPosition2DActionGoal.h  MoveToPosition2DActionResult.h  MoveToPosition2DFeedback.h  MoveToPosition2DGoal.h  (+1 more)
src/acc/: package.xml
src/bir.cimatec4_map/: .gitignore  package.xml
src/bir.cimatec4_map/launch/: gazebo.launch
src/bir.cimatec4_map/model/senai_cimatec4/: model.sdf
src/bir.cimatec4_map/world/: cimatec.world
src/challenge_husky/: CMakeLists.txt  package.xml
src/cimatec_map/: CMakeLists.txt  README.md  package.xml
src/cimatec_map/launch/: gazebo.launch
src/cimatec_map/world/: cimatec.world
src/husky/: CMakeLists.txt
src/map/: mapa100%.yaml  mapa98%.yaml  mapa99%.yaml
src/novo_mundo/: CMakeLists.txt
src/open_all/: CMakeLists.txt
src/opencv/: CMakeLists.txt  package.xml
src/sphere_follower/: CMakeLists.txt
src/world/: CMakeLists.txt  README.md  package.xml
(+186 files in other folders)
